fixed photocards on tablet and tag spacing

--- a/alexandria-balkaran-snaps/src/components/FilteredPhotos/FilteredPhotos.scss
+++ b/alexandria-balkaran-snaps/src/components/FilteredPhotos/FilteredPhotos.scss
@@ -17,7 +17,7 @@
   }
   @include desktop {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     & .drawer--open {
       width: 70%;
     }
