--- a/alexandria-balkaran-snaps/src/components/Hero/Hero.scss
+++ b/alexandria-balkaran-snaps/src/components/Hero/Hero.scss
@@ -30,6 +30,9 @@
     }
     @include desktop {
       width: 50%;
+      & .drawer--open {
+        width: 100%;
+      }
     }
   }
 }
