--- a/alexandria-balkaran-snaps/src/components/PhotoCard/PhotoCard.scss
+++ b/alexandria-balkaran-snaps/src/components/PhotoCard/PhotoCard.scss
@@ -13,14 +13,17 @@
     }
     @include desktop {
       display: flex;
-      width: 30.33%;
+      // display: inline-block;
+      // width: 30.33%;
+      width: 27rem;
     //   & .drawer--open {
     //     width: 0;
     //   }
-        & .drawer--open {
-        width: 50%;
-        min-width: 25rem;
-      }
+      //   & .filter__drawer--open {
+      //   // @include desktop;
+      //   width: 50%;
+      //   min-width: 25rem;
+      // }
     }
   }
 
@@ -35,10 +38,7 @@
 
     @include desktop {
       border-radius: 0.75rem;
-    //   & .drawer--open {
-    //     width: 50%;
-    //     min-width: 25rem;
-    //   }
+      width: 27rem;
     }
   }
   &__photographer {
